# template-microservices

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/: labels.toml
.github/ISSUE_TEMPLATE/: 1-bug_report.md  2-feature-request.md
.github/workflows/: ci.yml  labels.yml
