[project]
name = "Project Name - replace"
version = "0.0.1"
description = "Project description - replace"
authors = [{ name = "Author - replace", email = "email - replace"}]
license = { text = "MIT" }
readme = "README.md"
repository = "https://github.com/adsabs/<repo_name>"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]

packages = [
    "<package_name>",
]

dependencies = [
    'click>=8.0.3',
    # 'package @ git+ssh://git@github.com/someorgname/pkg-repo-name@[v1.1]#egg=some-pkg',
    # 'package @ git+https://github.com/someorgname/pkg-repo-name@[v1.1]#egg=some-pkg',
]

[project.urls]
Source = "https://github.com/adsabs/<repo_name>"

[project.optional-dependencies]
dev = [
    'black==22.3.0',
    'flake8==4.0.1',
    'isort==5.10.1',
    'pytest==6.2.5',
    'pyupgrade==2.29.1',
    'pytest-mock==3.6.1',
    'pre-commit==2.16.0',
    'coveralls==3.3.1',
    'mock==4.0.3',
    'coverage==6.2',
    'pytest-cov==3.0.0',
    'pytest-cookies==0.6.1',
]

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=<package_name>"
cache_dir = ".tmp/"
testpaths = [
    "tests",
]

[tool.coverage.run]
data_file = ".tmp/.coverage"

[tool.coverage.report]
skip_empty = true
skip_covered = true

[tool.isort]
profile = "black"
known_first_party = ["<package_name>", "tests"]

[tool.black]
line-length = 99 # override black's default line-length

[build-system]
requires = ["setuptools==60.10.0", "wheel", "flit_core >=3.2,<4", "ppsetuptools==2.0.2"]
build-backend = "flit_core.buildapi"
#build-backend = "setuptools.build_meta"

# see setup.py for explanation of these
[xsetup.entry_points]
console_scripts = [
    "adsingestp=adsingestp.cli:cli",
]
[xsetup]
scripts = [
]